migration-result/ver/13.x/management/admin/daemon.mdx
---
title: Run Teleport as a Daemon
description: Configure Teleport to run as a daemon using systemd
version: '13.x'
---

On Linux systems in non-containerized environments, we recommend running the `teleport` binary as a daemon using systemd.
Using a daemon helps to ensure that the `teleport` process can remain running and available regardless of a controlling terminal session or parent process, and opens up additional
configuration options that allow for better optimization, uptime, and availability.

This guide will outline best practices for installing, configuring, and starting teleport as a daemon on a Linux host using systemd.

## Prerequisites

- A Linux host where you will install Teleport. The host must be configured to use
  systemd. To ensure that your host supports systemd, check whether `/sbin/init` is symbolically linked to
  `/lib/systemd/systemd` or similar:

```code
$ readlink /sbin/init
/lib/systemd/systemd
```

<Note>
  Teleport stores data in `/var/lib/teleport`. Make sure that regular/non-admin
  users do not have access to this folder on the Auth Service host.
</Note>

## Step 1/3. Install and configure Teleport

Select and complete the appropriate installation instructions for your environment.

Use the appropriate commands for your environment to install your package:

<Tabs dropdownView dropdownCaption="Teleport Edition">
  <Tab title="Open Source">
    ```code
    $ curl https://goteleport.com/static/install.sh | bash -s 13.2.0
    ```
  </Tab>

  <Tab title="Enterprise">
    <Tabs>
      <Tab title="Debian 8+/Ubuntu 16.04+ (apt)">
        ```code
        # Download Teleport's PGP public key
        $ sudo curl https://apt.releases.teleport.dev/gpg \
        -o /usr/share/keyrings/teleport-archive-keyring.asc
        # Source variables about OS version
        $ source /etc/os-release
        # Add the Teleport APT repository for v13. You'll need to update this
        # file for each major release of Teleport.
        $ echo "deb [signed-by=/usr/share/keyrings/teleport-archive-keyring.asc] \
        https://apt.releases.teleport.dev/${ID?} ${VERSION_CODENAME?} stable/v13" \
        | sudo tee /etc/apt/sources.list.d/teleport.list > /dev/null

        $ sudo apt-get update
        $ sudo apt-get install teleport-ent
        ```

        For FedRAMP/FIPS-compliant installations, install the `teleport-ent-fips` package instead:

        ```code
        $ sudo apt-get install teleport-ent-fips
        ```
      </Tab>

      <Tab title="Amazon Linux 2/RHEL 7 (yum)">
        ```code
        # Source variables about OS version
        $ source /etc/os-release
        # Add the Teleport YUM repository for v13. You'll need to update this
        # file for each major release of Teleport.
        # First, get the major version from $VERSION_ID so this fetches the correct
        # package version.
        $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
        $ sudo yum-config-manager --add-repo "$(rpm --eval "https://yum.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/v13/teleport.repo")"
        $ sudo yum install teleport-ent
        #
        # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
        # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
        ```

        For FedRAMP/FIPS-compliant installations, install the `teleport-ent-fips` package instead:

        ```code
        $ sudo yum install teleport-ent-fips
        ```
      </Tab>

      <Tab title="Amazon Linux 2023/RHEL 8+ (dnf)">
        ```code
        # Source variables about OS version
        $ source /etc/os-release
        # Add the Teleport YUM repository for v13. You'll need to update this
        # file for each major release of Teleport.
        # Use the dnf config manager plugin to add the teleport RPM repo
        $ sudo dnf config-manager --add-repo "$(rpm --eval "https://yum.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/v13/teleport.repo")"

        # Install teleport
        $ sudo dnf install teleport-ent

        # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
        # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
        ```

        For FedRAMP/FIPS-compliant installations, install the `teleport-ent-fips` package instead:

        ```code
        $ sudo dnf install teleport-ent-fips
        ```
      </Tab>

      <Tab title="Tarball">
        In the example commands below, update `$SYSTEM_ARCH` with the appropriate
        value (`amd64`, `arm64`, or `arm`). All example commands using this variable
        will update after one is filled out.

        ```code
        $ curl https://get.gravitational.com/teleport-ent-v13.2.0-linux-$SYSTEM_ARCH-bin.tar.gz.sha256
        # <checksum> <filename>
        $ curl -O https://cdn.teleport.dev/teleport-ent-v13.2.0-linux-$SYSTEM_ARCH-bin.tar.gz
        $ shasum -a 256 teleport-ent-v13.2.0-linux-$SYSTEM_ARCH-bin.tar.gz
        # Verify that the checksums match
        $ tar -xvf teleport-ent-v13.2.0-linux-$SYSTEM_ARCH-bin.tar.gz
        $ cd teleport-ent
        $ sudo ./install
        ```

        For FedRAMP/FIPS-compliant installations of Teleport Enterprise, package URLs
        will be slightly different:

        ```code
        $ curl https://get.gravitational.com/teleport-ent-v13.2.0-linux-$SYSTEM_ARCH-fips-bin.tar.gz.sha256
        # <checksum> <filename>
        $ curl -O https://cdn.teleport.dev/teleport-ent-v13.2.0-linux-$SYSTEM_ARCH-fips-bin.tar.gz
        $ shasum -a 256 teleport-ent-v13.2.0-linux-$SYSTEM_ARCH-fips-bin.tar.gz
        # Verify that the checksums match
        $ tar -xvf teleport-ent-v13.2.0-linux-$SYSTEM_ARCH-fips-bin.tar.gz
        $ cd teleport-ent
        $ sudo ./install
        ```
      </Tab>
    </Tabs>
  </Tab>

  <Tab title="Cloud">
    <Tabs>
      <Tab title="Debian 8+/Ubuntu 16.04+ (apt)">
        Add the Teleport repository to your repository list:

        ```code
        # Download Teleport's PGP public key
        $ sudo curl https://apt.releases.teleport.dev/gpg \
        -o /usr/share/keyrings/teleport-archive-keyring.asc
        # Source variables about OS version
        $ source /etc/os-release
        # Add the Teleport apt repository for cloud.
        $ echo "deb [signed-by=/usr/share/keyrings/teleport-archive-keyring.asc] \
        https://apt.releases.teleport.dev/${ID?} ${VERSION_CODENAME?} stable/cloud" \
        | sudo tee /etc/apt/sources.list.d/teleport.list > /dev/null

        $ sudo apt-get update
        $ sudo apt-get install teleport-ent
        ```
      </Tab>

      <Tab title="Amazon Linux 2/RHEL 7 (yum)">
        ```code
        # Source variables about OS version
        $ source /etc/os-release
        # Add the Teleport yum repository for cloud.
        # First, get the major version from $VERSION_ID so this fetches the correct
        # package version.
        $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
        $ sudo yum-config-manager --add-repo "$(rpm --eval "https://yum.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/cloud/teleport.repo")"
        $ sudo yum install teleport-ent
        #
        # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
        # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
        ```
      </Tab>

      <Tab title="Amazon Linux 2023/RHEL 8+ (dnf)">
        ```code
        # Source variables about OS version
        $ source /etc/os-release
        # Add the Teleport yum repository for cloud.
        # Use the dnf config manager plugin to add the teleport RPM repo
        $ sudo dnf config-manager --add-repo "$(rpm --eval "https://yum.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/cloud/teleport.repo")"

        # Install teleport
        $ sudo dnf install teleport-ent

        # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
        # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
        ```
      </Tab>

      <Tab title="Tarball">
        In the example commands below, update `$SYSTEM_ARCH` with the appropriate
        value (`amd64`, `arm64`, or `arm`). All example commands using this variable
        will update after one is filled out.

        ```code
        $ curl https://get.gravitational.com/teleport-ent-v13.2.0-linux-$SYSTEM_ARCH-bin.tar.gz.sha256
        # <checksum> <filename>
        $ curl -O https://cdn.teleport.dev/teleport-ent-v13.2.0-linux-amd64-bin.tar.gz
        $ shasum -a 256 teleport-ent-v13.2.0-linux-amd64-bin.tar.gz
        # Verify that the checksums match
        $ tar -xvf teleport-ent-v13.2.0-linux-amd64-bin.tar.gz
        $ cd teleport-ent
        $ sudo ./install
        ```
      </Tab>
    </Tabs>

    <Accordion title="Is my Teleport instance compatible with Teleport Cloud?">
      Before installing a `teleport` binary with a version besides v13,
      read our compatibility rules to ensure that the binary is compatible with
      Teleport Cloud.

      When running multiple `teleport` binaries within a cluster, the following rules
      apply:

      - **Patch and minor** versions are always compatible, for example, any 8.0.1
        component will work with any 8.0.3 component and any 8.1.0 component will work
        with any 8.3.0 component.
      - Servers support clients that are 1 major version behind, but do not support
        clients that are on a newer major version. For example, an 8.x.x Proxy Service
        is compatible with 7.x.x resource services and 7.x.x `tsh`, but we don't
        guarantee that a 9.x.x resource service will work with an 8.x.x Proxy Service.
        This also means you must not attempt to upgrade from 6.x.x straight to 8.x.x.
        You must upgrade to 7.x.x first.
      - Proxy Services and resource services do not support Auth Services that are on
        an older major version, and will fail to connect to older Auth Services by
        default. This behavior can be overridden by passing `--skip-version-check`
        when starting Proxy Services and resource services.
    </Accordion>
  </Tab>
</Tabs>

Teleport requires a configuration YAML file to be created and configured in order to run. After initial installation, no
configuration file exists until we create it. This guide will use a minimal Teleport configuration based on defaults, however in production environments we
recommend reviewing configuration file options to better suit your needs.

To create the default Teleport configuration file, enter the following command:

```code
$ sudo teleport configure -o file
Wrote config to file "/etc/teleport.yaml". Now you can start the server. Happy Teleporting!
```

## Step 2/3. Create and configure a systemd service

Once you've installed the `teleport` binary and created a Teleport configuration file, let's create and configure the Teleport daemon.

Systemd is designed to use **unit files**, which are the files used to define and configure
any service daemon on systemd, in this case the `teleport` service. The rest of this guide will focus on creating and configuring the `teleport` service daemon depending on your preferred installation method, either a package manager, or from source.

<Tabs>
  <Tab title="Package Manager Installation">
    We have included a default `teleport` daemon configuration for packages installed with DEM or RPM package managers. To check that this daemon was installed correctly,
    enter the following command:

    ```code
    $ sudo systemctl status teleport
    ```

    You will see output similar to the following, including the file path (`/lib/systemd/system/teleport.service`) that contains the unit file for the systemd configuration being applied:

    ```code
    ● teleport.service - Teleport Service
         Loaded: loaded (/lib/systemd/system/teleport.service; disabled; vendor preset: enabled)
         Active: inactive (dead)
    ```

    Enter the following command to enable the systemd `teleport` daemon. Enabling the daemon using `systemctl` allows systemd to place the daemon in its dependency tree, ensuring that the Teleport service will be automatically restarted on any potential reboot:

    ```code
    $ sudo systemctl enable teleport
    ```

    Next, enter the following command to start the teleport service daemon:

    ```code
    $ sudo systemctl start teleport
    ```

    Confirm that the Teleport daemon was installed correctly by checking the service status. The following command will output a status of `Active: active (running)`:

    ```code
    $ sudo systemctl status teleport | grep Active
    Active: active (running) since Mon 2022-04-18 18:33:41 UTC; 41s ago
    ```
  </Tab>

  <Tab title="Source Installation">
    Enter the following `teleport` command to have Teleport output a systemd unit file to `stdout` to be reviewed and applied as needed:

    ```code
    $ teleport install systemd
    ```

    If the output describes a good configuration for your environment, enter the command once again using the `-o` flag to
    write the output to a file within one of systemd's accepted unit file load paths. For most use cases, we recommend using the path `/etc/systemd/system/teleport.service` for your unit file:

    ```code
    $ sudo teleport install systemd -o /etc/systemd/system/teleport.service
    ```

    Enable the `teleport` service daemon using `systemctl` so that systemd can place it in its dependency tree. This also ensures that the `teleport` service will be automatically restarted on any potential reboot:

    ```code
    $ sudo systemctl enable teleport
    ```

    Start the `teleport` service daemon using systemctl:

    ```code
    $ sudo systemctl start teleport
    ```

    Finally, confirm that the Teleport daemon has been installed correctly by checking the service daemon's status. The following command will output a status of `Active: active (running)` if the configuration has been applied correctly:

    ```code
    $ sudo systemctl status teleport | grep Active
    Active: active (running) since Mon 2022-04-18 18:33:41 UTC; 41s ago
    ```
  </Tab>
</Tabs>

## Step 3/3. Restart the Teleport daemon

Teleport supports graceful restarts, enabling you to easily change your Teleport
configuration or upgrade your `teleport` binary without sacrificing
availability.

Run the following command to gracefully restart the `teleport` daemon:

```code
$ sudo systemctl reload teleport
```

This will perform a graceful restart, i.e. the Teleport daemon will fork a new
process to handle new incoming requests, leaving the old daemon process running
until existing clients disconnect.

<Tip>
  To upgrade a host to a newer version of Teleport, you must:

  - Replace the Teleport binaries, usually [`teleport`](/ver/13.x/reference/cli#teleport)
    and [`tctl`](/ver/13.x/reference/cli#tctl).
  - Execute `systemctl reload teleport`.
</Tip>

## Understanding Teleport daemon command line options for unit file configuration

The `teleport install systemd` command includes a number of optional flags that you can use to strictly define parameters of the generated unit file and set where that output will be written.
The following table includes all command line options available with the `teleport install systemd` command, a brief description of what they do, and their default settings:

| Flag              | Description                                                                                                                                                         | Default                                         |
| ----------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------- |
| `--fd-limit`      | The maximum number of open file descriptors by the service, defined by `LimitNOFILE` in the unit file.                                                              | `--fd-limit=8192`                               |
| `--env-file`      | The path to the `EnvironmentFile` defined by the system unit file, containing any potential variables to be used in the configuration.                              | `--envfile=/etc/default/teleport`               |
| `--pid-file`      | The path to the pid file containing the process identification number.                                                                                              | `--pid-file=/run/teleport.pid`                  |
| `--teleport-path` | The full path to the `teleport` binary.                                                                                                                             | `--teleport-path=/usr/local/bin/teleport`       |
| `-o`, `--output`  | The full unit file load path which will define where to create and store the system unit file itself. This flag is used to write the output to the designated file. | `--output=/etc/systemd/system/teleport.service` |

While a default configuration can always be created using the `sudo teleport install systemd -o /etc/systemd/system/teleport.service`command,
the same configuration using command line options is demonstrated below:

```code
$ sudo teleport install systemd \
--fd-limit=8192 \
--env-file=/etc/default/teleport \
--pid-file=/run/teleport.pid \
--teleport-path=/usr/local/bin/teleport \
--output=/etc/systemd/system/teleport.service
```

## Next steps

In this guide, we showed you how to run `teleport start` as a systemd service.
To see all commands that you can run via the `teleport` binary, see the
[Teleport CLI Reference](/ver/13.x/reference/cli#teleport).

While we used a minimal configuration in this guide, for a production Teleport
cluster, you should consult our
[Configuration Reference](/ver/13.x/reference/config).

If you need information on how `systemctl reload teleport` works, see our guide to
[upgrading a Teleport binary](/ver/13.x/management/admin/upgrading-the-teleport-binary).

For information on unit file configurations and unit file load paths,
see [systemd's documentation on systemd.unit configurations](https://www.freedesktop.org/software/systemd/man/systemd.unit.html)
